fixing the stacking on mobile, span and h1

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,20 +1,27 @@
 @media screen and (min-width: 600px) {
-    nav ul {
-        display: flex;
-        justify-content: space-around;
-    }
-
-    nav a {
-        padding: 15px 30px;
-    }
-
     main {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 2fr 1fr;
         gap: 20px;
     }
 
     .card {
+        background-color: #fff;
         margin: 5px;
+        border-radius: 6px;
+        box-shadow: 0 0 30px rgb(83, 75, 75);
     }
+}
+
+span {
+    color: white;
+    font-size: 50px;
+}
+
+.title-container h1 {
+    font-family: 'Open Sans', sans-serif;
+    color: #000;
+    text-align: left;
+    margin: 0;
+    font-size: 2rem;
 }
