--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,17 +1,7 @@
 @media screen and (max-width: 599px) {
-    nav ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
     main {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .card {
-        width: 100%;
-        margin-bottom: 20px;
+        display: grid;
+        grid-template-columns: 1fr; 
+        gap: 20px; 
     }
 }
